
2009-09-10  Ivan Maidanski <ivmai@mail.ru>
	(ivmai121.diff)

	* include/gc.h: Recognize __CEGCC__ (as a synonym for _WIN32_WCE).
	* include/gc_config_macros.h: Ditto.
	* include/gc.h (GC_MAXIMUM_HEAP_SIZE): Recognize new macro.
	* include/gc.h (GC_INIT_CONF_MAXIMUM_HEAP_SIZE): New macro (for
	internal use).
	* include/gc_config_macros.h: Always include stddef.h if GCC.
	* include/gc_config_macros.h (GC_API): Define for CeGCC in the
	same way as for MinGW.
	* include/gc_config_macros.h (GC_API): Group the definition for
	all cases together (check for GC_DLL only once).
	* include/gc_pthread_redirects.h: Group non-Darwin code together.
	* tests/test.c: Recognize GC_PRINT_VERBOSE_STATS (only if GC_DLL).

2009-09-10  Ivan Maidanski <ivmai@mail.ru>
	(ivmai120a.diff, ivmai120b.diff)

	* Makefile.direct (GC_PTHREADS_PARAMARK, GC_IGNORE_GCJ_INFO,
	GC_PRINT_VERBOSE_STATS, GC_DONT_EXPAND, GC_INITIAL_HEAP_SIZE,
	GC_FREE_SPACE_DIVISOR, GC_TIME_LIMIT, GC_FULL_FREQ): Add the
	comment for.
	* misc.c (GC_init_inner): Recognize GC_PRINT_VERBOSE_STATS (new
	macro).
	* dyn_load.c (GC_wnt): Change definition to TRUE for WinCE; add
	FIXME and the comment for WinCE.
	* gcj_mlc.c (GC_init_gcj_malloc): Recognize GC_IGNORE_GCJ_INFO
	(new macro).
	* include/gc.h (GC_HAVE_BUILTIN_BACKTRACE): Don't define for VC++
	WinCE (since backtrace() is unimplemented).
	* include/private/gc_priv.h (GC_n_heap_bases): Remove declaration
	(since static).
	* os_dep.c (GC_n_heap_bases): Define as STATIC; move the
	definition to be above GC_is_heap_base().
	* include/private/gcconfig.h: Don't define NOSYS for WinCE on ARM
	(both for MinGW and CeGCC toolchains).
	* include/private/gcconfig.h: Recognize __CEGCC__ and
	__MINGW32CE__ (as synonyms for __WIN32_WCE).
	* include/private/gcconfig.h: If SH4 then don't set config
	parameters for SH.
	* include/private/thread_local_alloc.h (GC_key_create): Don't
	abort on failures, just return -1 in these cases (this also